--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Important notice
+================
+The applications in this project have been separated into different repositories
+so that they can be used separately.
+
+This repository is no longer updated and will be eventually deleted. If you want
+to see the new repositories, you can find them in my Github profile.
+
 Condottieri, a web based version of the classic game 'Machiavelli'
 ==================================================================
 
